New way to run, with maven => correct way

--- a/.gitignore
+++ b/.gitignore
@@ -209,4 +209,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,java,intellij+all,visualstudiocode
