--- a/.gitignore
+++ b/.gitignore
@@ -210,5 +210,6 @@ $RECYCLE.BIN/
 *.lnk
 
 .env
+docs/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,java,intellij+all,visualstudiocode
