--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -43,6 +45,7 @@
 # .idea/modules
 # *.iml
 # *.ipr
+dependency-reduced-pom.xml
 
 # CMake
 cmake-build-*/
